changes in templates

--- a/www/index.html
+++ b/www/index.html
@@ -31,8 +31,8 @@
     <!--
       The nav bar that will be updated as we navigate between views.
     -->
-    <ion-nav-bar class="bar-stable">
-        <ion-nav-back-button>
+    <ion-nav-bar class="bar-stable" ng-controller="BackCtrl">
+        <ion-nav-back-button ng-click="myGoBack()">
         </ion-nav-back-button>
     </ion-nav-bar>
     <!--
