--- a/www/index.html
+++ b/www/index.html
@@ -4,11 +4,15 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="initial-scale=1, maximum-scale=1, user-scalable=no, width=device-width">
+    <meta http-equiv="Content-Security-Policy" content="script-src 'self' https://maps.googleapis.com/ https://maps.gstatic.com/ https://mts0.googleapis.com/ http://localhost:35729/ 'unsafe-inline' 'unsafe-eval'">
+
     <title></title>
 
     <!-- compiled css output -->
     <link href="css/ionic.app.css" rel="stylesheet">
     <link href="css/style.css" rel="stylesheet">
+
+    <script src='https://maps.googleapis.com/maps/api/js?libraries=geometry'></script>
 
     <!-- ionic/angularjs js -->
     <script src="lib/ionic/js/ionic.bundle.js"></script>
@@ -22,12 +26,9 @@
     <script src="js/app.js"></script>
     <script src="js/controllers.js"></script>
     <script src="js/services.js"></script>
-
     <script src='lib/lodash/dist/lodash.min.js'></script>
     <script src='lib/angular-simple-logger/dist/angular-simple-logger.min.js'></script>
     <script src='lib//angular-google-maps/dist/angular-google-maps.min.js'></script>
-    <script src='//maps.googleapis.com/maps/api/js?sensor=false'></script>
-
   </head>
 
   <body ng-app="starter">
@@ -35,7 +36,7 @@
       The nav bar that will be updated as we navigate between views.
     -->
     <ion-nav-bar class="custom-bar">
-      <ion-nav-back-button></ion-nav-back-button>
+      <ion-nav-back-button>Volver</ion-nav-back-button>
     </ion-nav-bar>
     <!--
       The views will be rendered in the <ion-nav-view> directive below
